--- a/index.html
+++ b/index.html
@@ -1,23 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trade Pay</title>
-</head>
-<body>
-    <button class="tradeno">Pay Now</button>
+<！doctype html>
+<超文本标记语言朗="zh">
+<头>
+    <元字符集="UTF-8">
+    <元姓名="视口" 内容="宽度=设备宽度，初始比例=1.0">
+    <标题>短信登录</标题>
+    <风格>
+身体{
+            字体系列:Arial,无衬线;
+            显示:弯曲;
+            justify-content:中心;
+            对齐项目:中心;
+            高度:100VH;
+            背景色：#f4f4f4；
+        }
+.login-container{
+            背景:白色的;
+            填充:20PX;
+            边界半径:5PX;
+            箱形阴影:0 2PX 10PX RGBA(0,0,0,0.1);
+        }
+输入[类型="文本"]，输入[类型="按钮"] {
+            宽度:100%;
+            填充:10PX;
+            边缘:10PX 0;
+            边境:1PX 固体#ccc；
+            边界半径:5PX;
+        }
+输入[类型="按钮"] {
+            背景色：#007bff；
+            颜色:白色的;
+            边境:没有一个;
+            光标:指针;
+        }
+输入[类型="按钮"]:盘旋 {
+            背景色：#0056b3；
+        }
+    </风格>
+</头>
+<身体>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            document.querySelector('.tradeno').addEventListener('click', function() {
-                AlipayJSBridge.call("tradePay", {
-                    tradeNO: "2024062422001404721436308468"
-                }, function(result) {
-                    console.log(result);
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+<div班级="登录容器">
+    <H2>短信登录</H2>
+    <输入类型="文本" 身份标识="电话" 占位符="请输入手机号" />
+    <输入类型="按钮" 身份标识="获取代码" 价值="获取验证码" />
+</div>
+
+<脚本>
+文件。getElementById('get-code').addEventListener('单击',功能() {
+        Const 电话=文档。getElementById('电话').价值;
+        如果 (/^\d{10，11}$/.测试(电话)) {
+            警惕的('验证码已发送到 '+电话);
+            // 在这里添加获取验证码的逻辑
+        } 其他 {
+            警惕的('请输入有效的手机号');
+        }
+    });
+</脚本>
+
+</身体>
+</超文本标记语言>
