--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>短信登录</title>
+    <title>登录爱奇艺</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,13 +18,22 @@
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
         }
         input[type="text"], input[type="button"] {
-            width: 100%;
+            width: calc(100% - 20px);
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+        }
+        .agreement {
+            font-size: 12px;
+            margin: 10px 0;
+        }
+        .agreement a {
+            color: blue;
+            text-decoration: underline;
         }
         input[type="button"] {
             background-color: #007bff;
@@ -35,24 +44,58 @@
         input[type="button"]:hover {
             background-color: #0056b3;
         }
+        .flex-container {
+            display: flex;
+            align-items: center;
+        }
+        #verify-code {
+            width: 100px;
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
 
 <div class="login-container">
-    <h2>短信登录</h2>
-    <input type="text" id="phone" placeholder="请输入手机号" />
-    <input type="button" id="get-code" value="获取验证码" />
+    <h2>登录爱奇艺</h2>
+    <div class="flex-container">
+        <span>+86</span>
+        <input type="text" id="phone" placeholder="请输入手机号" />
+    </div>
+    <div class="agreement">
+        <input type="checkbox" id="agree" />
+        <label for="agree">阅读并同意《用户协议》和《隐私政策》</label>
+    </div>
+    <div class="flex-container">
+        <input type="text" id="verify-code" placeholder="验证码" disabled />
+        <input type="button" id="get-code" value="获取验证码" disabled />
+    </div>
+    <input type="button" id="login" value="登录" disabled />
 </div>
 
 <script>
+    document.getElementById('agree').addEventListener('change', function() {
+        const isChecked = this.checked;
+        document.getElementById('get-code').disabled = !isChecked;
+        document.getElementById('login').disabled = !isChecked;
+    });
+
     document.getElementById('get-code').addEventListener('click', function() {
         const phone = document.getElementById('phone').value;
         if (/^\d{10,11}$/.test(phone)) {
             alert('验证码已发送到 ' + phone);
-            // 在这里添加获取验证码的逻辑
+            document.getElementById('verify-code').disabled = false;
         } else {
             alert('请输入有效的手机号');
+        }
+    });
+
+    document.getElementById('login').addEventListener('click', function() {
+        const code = document.getElementById('verify-code').value;
+        if (code) {
+            alert('登录成功！');
+        } else {
+            alert('请输入验证码');
         }
     });
 </script>
