--- a/index.html
+++ b/index.html
@@ -19,27 +19,43 @@
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             width: 300px;
+            text-align: center;
         }
-        input[type="text"], input[type="button"] {
-            width: calc(100% - 20px);
-            padding: 10px;
+        .input-container {
+            position: relative;
             margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        }
+        .input-line {
+            border-bottom: 1px solid #ccc;
+            width: 100%;
+            height: 20px; /* 控制高度 */
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+        .input-line input {
+            border: none;
+            outline: none;
+            width: calc(100% - 40px); /* 减去前缀的宽度 */
+            margin-left: 40px; /* 留出空间给 +86 */
         }
         .agreement {
             font-size: 12px;
             margin: 10px 0;
         }
         .agreement a {
-            color: blue;
+            color: green;
             text-decoration: underline;
         }
         input[type="button"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
             background-color: #007bff;
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
         }
         input[type="button"]:hover {
             background-color: #0056b3;
@@ -48,23 +64,21 @@
             display: flex;
             align-items: center;
         }
-        #verify-code {
-            width: 100px;
-            margin-left: 10px;
-        }
     </style>
 </head>
 <body>
 
 <div class="login-container">
     <h2>登录爱奇艺</h2>
-    <div class="flex-container">
-        <span>+86</span>
-        <input type="text" id="phone" placeholder="请输入手机号" />
+    <div class="input-container">
+        <span style="position: absolute; left: 0;">+86</span>
+        <div class="input-line">
+            <input type="text" id="phone" placeholder="请输入手机号" />
+        </div>
     </div>
     <div class="agreement">
         <input type="checkbox" id="agree" />
-        <label for="agree">阅读并同意《用户协议》和《隐私政策》</label>
+        <label for="agree">阅读并同意<a href="#">《用户协议》</a>和<a href="#">《隐私政策》</a></label>
     </div>
     <div class="flex-container">
         <input type="text" id="verify-code" placeholder="验证码" disabled />
