--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+        
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -37,7 +39,12 @@
             border: none;
             outline: none;
             width: calc(100% - 40px); /* 减去前缀的宽度 */
-            margin-left: 40px; /* 留出空间给 +86 */
+            margin-left: 40px; /* 留出空间给国家代码 */
+        }
+        .country-code {
+            position: absolute;
+            left: 0;
+            cursor: pointer;
         }
         .agreement {
             font-size: 12px;
@@ -77,6 +84,16 @@
         input[type="checkbox"]:checked + .custom-checkbox {
             background-color: #007bff;
         }
+        /* 下拉框样式 */
+        select {
+            position: absolute;
+            left: 0;
+            border: none;
+            background: transparent;
+            width: 40px; /* 下拉框宽度 */
+            cursor: pointer;
+            outline: none;
+        }
     </style>
 </head>
 <body>
@@ -84,8 +101,14 @@
 <div class="login-container">
     <h2>登录爱奇艺</h2>
     <div class="input-container">
-        <span style="position: absolute; left: 0;">+86</span>
         <div class="input-line">
+            <select id="country-code" class="country-code">
+                <option value="+86">+86</option>
+                <option value="+1">+1</option>
+                <option value="+44">+44</option>
+                <option value="+81">+81</option>
+                <!-- 添加其他国家代码 -->
+            </select>
             <input type="text" id="phone" placeholder="请输入手机号" />
         </div>
     </div>
@@ -110,8 +133,9 @@
 
     document.getElementById('get-code').addEventListener('click', function() {
         const phone = document.getElementById('phone').value;
+        const countryCode = document.getElementById('country-code').value;
         if (/^\d{10,11}$/.test(phone)) {
-            alert('验证码已发送到 ' + phone);
+            alert('验证码已发送到 ' + countryCode + phone);
             document.getElementById('verify-code').disabled = false;
         } else {
             alert('请输入有效的手机号');
